--- a/catteryConsole/AddCatsWPF.xaml
+++ b/catteryConsole/AddCatsWPF.xaml
@@ -1,12 +1,48 @@
-﻿<Window x:Class="catteryConsole.AddCatsWPF"
+﻿<Window x:Class="cattery.AddCatsWPF"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:catteryConsole"
-        mc:Ignorable="d"
-        Title="AddCatsWPF" Height="450" Width="800">
-    <Grid>
-        
+        Title="Aggiungi Gatto" Height="400" Width="600" WindowStartupLocation="CenterScreen">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="1.2*" />
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" VerticalAlignment="Top" Margin="0,0,20,0">
+            <TextBlock Text="Nome:" />
+            <TextBox x:Name="NameTextBox" Margin="0,5,0,10" />
+
+            <TextBlock Text="Razza:" />
+            <TextBox x:Name="RaceTextBox" Margin="0,5,0,10" />
+
+            <TextBlock Text="Sesso:" />
+            <ComboBox x:Name="SexComboBox" Margin="0,5,0,10" SelectedIndex="0">
+                <ComboBoxItem Content="Maschio" Tag="Male"/>
+                <ComboBoxItem Content="Femmina" Tag="Female"/>
+            </ComboBox>
+
+            <TextBlock Text="Descrizione:" />
+            <TextBox x:Name="DescriptionTextBox" Margin="0,5,0,10" Height="60" AcceptsReturn="True" />
+
+            <TextBlock Text="Data di nascita:" />
+            <DatePicker x:Name="BirthDatePicker" Margin="0,5,0,10" />
+
+            <TextBlock Text="Arrivo al gattile:" />
+            <DatePicker x:Name="ArrivedDatePicker" Margin="0,5,0,10" />
+
+            <TextBlock Text="Uscita dal gattile:" />
+            <DatePicker x:Name="LeftDatePicker" Margin="0,5,0,10" />
+
+            <Button Content="Salva" Width="100" Margin="0,20,0,0" HorizontalAlignment="Left" Click="SaveButton_Click"/>
+        </StackPanel>
+
+        <!-- Zona drag & drop ridotta per l'immagine -->
+        <Border Grid.Column="1" Background="#EEE" BorderBrush="#CCC" BorderThickness="1" CornerRadius="8"
+                Height="120" VerticalAlignment="Top" Margin="0,0,0,0"
+                AllowDrop="True" Drop="ImageBorder_Drop" DragEnter="ImageBorder_DragEnter" DragLeave="ImageBorder_DragLeave">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock Text="Trascina qui l'immagine" HorizontalAlignment="Center" Foreground="#888"/>
+                <Image x:Name="CatImagePreview" Width="80" Height="80" Stretch="Uniform" Margin="0,10,0,0"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
