--- a/catteryConsole/AfterLoginWPF.xaml
+++ b/catteryConsole/AfterLoginWPF.xaml
@@ -8,7 +8,7 @@
         Title="AfterLoginWPF" Height="450" Width="800">
     <Grid>
         <Label Content="Benvenuto Al Gattile Online" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" Width="646" FontWeight="Bold" FontSize="48" Height="69"/>
-        <Button x:Name="btn_AdminPanel" Content="Aggiungi Gatti" HorizontalAlignment="Center" Margin="0,159,0,0" VerticalAlignment="Top" Height="58" Width="252" />
+        <Button x:Name="btn_AddCats" Content="Aggiungi Gatti" HorizontalAlignment="Center" Margin="0,159,0,0" VerticalAlignment="Top" Height="58" Width="252" Click="btn_AddCats_Click" />
         <Button x:Name="btn_ViewCats" Content="Visualizza Gatti" HorizontalAlignment="Center" Margin="0,325,0,0" VerticalAlignment="Top" Height="58" Width="252" Click="btn_ViewCats_Click"/>
         <Button x:Name="btn_ViewAdoptions" Content="Visualizza Adozioni" HorizontalAlignment="Center" Margin="0,238,0,0" VerticalAlignment="Top" Height="58" Width="252" Click="btn_ViewAdoptions_Click" />
 
